# tech-challenge-deep-learning-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
config/: config.yaml
docker/: prometheus.yml
docker/grafana/provisioning/alerting/: alerts.yml
docker/grafana/provisioning/dashboards/: api_dashboard.json  provider.yml
scripts/: build_reference.py  export_champion.py
src/: config.py
src/api/: main.py  routes.py  schemas.py  state.py  ui.py
src/data/: ingest.py  pipeline.py  preprocess.py
src/model/: dataset.py  evaluate.py  lstm.py  pipeline.py  registry.py  train.py
src/monitoring/: drift.py  metrics.py
