[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tech-challenge-deep-learning-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.54",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "mlflow>=2.13",
    "torch>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "prometheus-client>=0.20",
    "evidently>=0.4",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "ipykernel",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
